# rust-distributed-job-queue

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  deny.toml  docker-compose.yml
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: config.rs  error.rs  lib.rs  main.rs  routes.rs  sse.rs
crates/core/: Cargo.toml
crates/core/src/: backoff.rs  error.rs  lib.rs  model.rs  status.rs  store.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: concurrency.rs  lifecycle.rs  reliability.rs  workers.rs
crates/queue/: Cargo.toml
crates/queue/src/: lib.rs  maintenance.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 0001_init.sql
crates/storage/src/: lib.rs  row.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: config.rs  handlers.rs  lib.rs  main.rs  runtime.rs
docs/: demo-script.md  design-decisions.md  interview-guide.md
scripts/: load_test.sh  prometheus.yml
