[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/storage",
    "crates/queue",
    "crates/telemetry",
    "crates/worker",
    "crates/api",
    "crates/integration-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["abdulhai-unico <abdulh@unicostudio.co>"]
repository = "https://github.com/maverickkhan/rust-distributed-job-queue"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
async-trait = "0.1"

# Web
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }
hyper = "1"

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate",
] }

# Serialization / domain
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Errors
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"

# Config
config = { version = "0.14", default-features = false, features = ["toml", "convert-case"] }

# Test deps
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
