[package]
name = "djq-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Tracing and Prometheus metrics setup for the distributed job queue"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus = { workspace = true }
once_cell = "1"
